@@ -1008,6 +1008,12 @@ code {
 
 <p><strong>default.developer_menu</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Developer Menu".</p>
 
+<p><strong>default.developer_cmd_1</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Developer Command 1".</p>
+
+<p><strong>default.developer_cmd_2</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Developer Command 2".</p>
+
+<p><strong>default.developer_cmd_3</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Developer Command 3".</p>
+
 <hr />
 
 <h4>ItemManager: Items</h4>
@@ -1311,6 +1317,8 @@ code {
 <p><strong>log_menu</strong> | <code>point</code> | Position for the Log menu button.</p>
 
 <p><strong>tooltip_length</strong> | <code>["short", "long_menu", "long_all"]</code> | The length of power descriptions in tooltips. 'short' will display only the power name. 'long_menu' (the default setting) will display full tooltips, but only for powers that are in the Powers menu. 'long_all' will display full tooltips for all powers.</p>
+
+<p><strong>powers_overlap_slots</strong> | <code>bool</code> | When true, the power icon is drawn on top of the empty slot graphic for any given slot. If false, the empty slot graphic will only be drawn if there's not a power in the slot. The default value is false.</p>
 
 <hr />
 
